--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 
-		<script src="js/reveal.js"></script>
+		<script src="js/reveal.min.js"></script>
 		<script src="dist/index.min.js"></script>
 	</body>
 </html>
